--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <header class="header fade-in">
             <div class="logo">
                 <i class="fas fa-play-circle"></i>
-                <span>Diya and Meet{Drashti}</span>
+                <span>Diya and Meet{Drashti}</span>   <span>Click on Play Botton</span>
             </div>
             <div class="ios-badge">
                 Short Film Trailer
@@ -812,4 +812,5 @@
         }
     </script>
 </body>
+
 </html>
